Enhancements to the opensvc css and add srp to containers feature matrix

--- a/source/_static/opensvc.css
+++ b/source/_static/opensvc.css
@@ -14,6 +14,22 @@ body {
     background: #fff;
 }
 
+div.section > * {
+  padding-left: 10px;
+}
+
+th.head {
+  text-align: left;
+}
+
+tt {
+  font-family: monospace;
+}
+
+dl.function > * > tt {
+  background-color: lightgrey;
+}
+
 a {
     color: #660000;
     text-decoration: none;
@@ -28,19 +44,19 @@ a:visited {
 }
 
 table {
-    border: 0;
-    margin: 0;
-    outline: 0;
-    padding: 0;
-  border-collapse: collapse;
-  border-spacing: 0px;
-  border-width: 0px;
-  border-color: #fff;
+    border: 0px;
+    border-color: transparent;
 }
 
 li.right {
   float: right;
   margin-right: 3px;
+}
+
+ul.simple {
+  list-style: initial;
+  -webkit-padding-start: 0px;
+  padding-left: 25px;
 }
 
 ul {
@@ -79,9 +95,6 @@ h3 {
 
 pre {
   overflow-wrap: break-word;
-}
-div.section > * {
-  padding-left: 10px;
 }
 div.related > ul {
     margin: 0px;
