--- a/source/_static/opensvc.css
+++ b/source/_static/opensvc.css
@@ -1,16 +1,11 @@
 html {
-    font-size: 10pt;
-    font-family: 'Ubuntu', Arial, Sans, Georgia, Times new Roman;
-    color: #333333;
-    background: url('background.gif') repeat-x #3A3A3A;
+    font-size: 14pt;
+    font-family: 'opensans', Arial, Sans, Georgia, Times new Roman;
+    color: dimgray;
 }
 
 body {
     padding: 1em;
-    border-radius: 8px;
-   -moz-border-radius:8px;
-   -webkit-border-radius:8px;
-    border-spacing: 0;
     background: #fff;
 }
 
@@ -31,7 +26,7 @@ dl.function > * > tt {
 }
 
 a {
-    color: #660000;
+    color: black;
     text-decoration: none;
 }
 
@@ -40,7 +35,7 @@ a:hover {
 }
 
 a:visited {
-    color: #880000;
+    color: black;
 }
 
 table {
@@ -94,20 +89,14 @@ div.body {
 }
 
 h1 {
-  background-color: #000000;
+  background-color: teal;
   color: #ffffff;
   padding: 8px 10px;
-  border-radius: 8px;
- -moz-border-radius:8px;
- -webkit-border-radius:8px;
 }
 h2 {
-  background-color: #663333;
+  background-color: goldenrod;
   color: #ffffff;
   padding: 6px 10px;
-  border-radius: 8px;
- -moz-border-radius:8px;
- -webkit-border-radius:8px;
 }
 h3 {
   font-size: 1.5em;
@@ -126,7 +115,13 @@ h3 {
 }
 
 pre {
-  overflow-wrap: break-word;
+    background: #333;
+    color: lightgrey;
+    box-shadow: #333 1px 1px 20px 0;
+    border-radius: 4px;
+    padding: 1em;
+    margin: 0.5em;
+    overflow-wrap: break-word;
 }
 div.related > ul {
     margin: 0px;
