Update agent install page, extra js and css
* fix table in folded sections not dispplayed
* remove 1.8- specifics
* move the installed items to its dedicated page and reflink
* convert more code to tables
* fix css responsive tables cell content no wrapping

--- a/source/_static/css/extra.css
+++ b/source/_static/css/extra.css
@@ -13,6 +13,9 @@
 .rst-content tt.literal, .rst-content tt.literal, .rst-content code.literal {
 	color: teal;
 }
+.wy-table-responsive table td, .wy-table-responsive table th {
+	white-space: initial;
+}
 .html-toggle-button
 {
     position: relative;
