Add version in package download urls

--- a/source/_static/css/extra.css
+++ b/source/_static/css/extra.css
@@ -18,10 +18,14 @@
 }
 .html-toggle-button
 {
-    position: relative;
-    cursor: pointer;
+	position: relative;
+	cursor: pointer;
 }
-
+.highlight > .literal-block {
+	padding: 1em !important;
+	margin: 0px !important;
+	border: none !important;
+}
 .html-toggle-button:hover:after,
 .section.emphasize-children > .section > h3.html-toggle-button:hover:after {# hack to override higher priority rule #}
 {
@@ -29,15 +33,15 @@
 
 .html-toggle-button:after
 {
-    position: relative;
-    top: -0.15em;
-    margin: 0;
-    padding: 0.15em 0.3em;
-    text-shadow: none;
-    font-size: 65%;
-    font-style: italic;
-    font-weight: bold;
-    border: 1px solid transparent;
+	position: relative;
+	top: -0.15em;
+	margin: 0;
+	padding: 0.15em 0.3em;
+	text-shadow: none;
+	font-size: 65%;
+	font-style: italic;
+	font-weight: bold;
+	border: 1px solid transparent;
 }
 
 .html-toggle.collapsed > .html-toggle-button:after {  content: "[+ show section]"; }
@@ -46,9 +50,9 @@
 .html-toggle-button:active:after,
 .section.emphasize-children > .section > h3.html-toggle-button:active:after
 {
-    position: relative;
-    top: calc(-0.15em + 1px);
-    left: 1px;
+	position: relative;
+	top: calc(-0.15em + 1px);
+	left: 1px;
 }
 
 @media screen and (min-width: 1400px) {
