--- a/source/_static/css/extra.css
+++ b/source/_static/css/extra.css
@@ -1,4 +1,21 @@
 /*
+ * ansi2html
+ */
+pre.output {
+	background: white;
+	padding: 1em;
+	white-space: pre;
+	padding: 12px 12px;
+	font-family: Consolas,"Andale Mono WT","Andale Mono","Lucida Console","Lucida Sans Typewriter","DejaVu Sans Mono","Bitstream Vera Sans Mono","Liberation Mono","Nimbus Mono L",Monaco,"Courier New",Courier,monospace;
+	font-size: 12px;
+	line-height: 1.5;
+	display: block;
+	overflow: auto;
+	color: #404040;
+	border: 1px solid #e1e4e5;
+}
+
+/*
  * Level Selector
  */
 .wy-side-nav-search>div.version {
