Refactor the Service > Orchestration section
* split into more files
* replace the state transition cryptic table with a more real-life scenario
oriented layout

--- a/source/_static/css/extra.css
+++ b/source/_static/css/extra.css
@@ -301,3 +301,8 @@ pre.output {
 .c-link:before {color: black; content: '\f0c1'; font-family: FontAwesome}
 .c-link {color: transparent}
 
+.c-green {color: seagreen}
+.c-orange {color: orange}
+.c-red {color: #990000}
+.c-blue {color: cornflowerblue}
+
